lectures/Lecture_05/no
binary_io.c:5:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘int’
 int main()
 ^~~
